adding pdf to invoice now working for one
needs further testing